[package]
name = "log-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9"
csv = "1.1.6"
tui = "0.19.0"
crossterm = "0.25.0"
clap = { version = "4.0", features = ["derive"] }
duration-string = "0.1.1"
